# ADLINK-VisionDataModels-Reference

definitions/TagGroup/com.adlinktech.vision.artifacts/2.2.1/: BinaryArtifactTagGroup.json  OpenVINOModelArtifactTagGroup.json
definitions/TagGroup/com.adlinktech.vision.capture/2.2.1/: CameraAddRequestTagGroup.json  CameraRemoveRequestTagGroup.json  StreamRequestTagGroup.json  VideoFrameTagGroup.json
definitions/TagGroup/com.adlinktech.vision.inference/2.000/: ClassificationTagGroup.json  DetectionBoxTagGroup.json  DetectionPointTagGroup.json  OutputTensorTagGroup.json  RawInferenceResultTagGroup.json  RawOutputTagGroup.json  SegmentationTagGroup.json
definitions/TagGroup/com.adlinktech.vision.inference/2.2.0/: InstanceSegmentationTagGroup.json  SemanticSegmentationTagGroup.json
definitions/TagGroup/com.adlinktech.vision.inference/2.2.1/: ClassificationTagGroup.json  DetectionBoxTagGroup.json  DetectionPointTagGroup.json  InstanceSegmentationTagGroup.json  LineCrossedTagGroup.json  LineTagGroup.json  RawInferenceResultTagGroup.json  RegionOfInterestTagGroup.json  SegmentationTagGroup.json  SemanticSegmentationTagGroup.json
definitions/TagGroup/com.adlinktech.vision.system/2.2.1/: AcknowledgeTagGroup.json  AlarmAcknowledgeTagGroup.json  AlarmTagGroup.json  CameraMetricsTagGroup.json  ConfigActualStateTagGroup.json  DeviceErrorTagGroup.json  DeviceInfoTagGroup.json  EngineConfigTagGroup.json  EngineInfoTagGroup.json  (+5 more)
scripts/: find-taggroups-reference.sh  find-taggroups.sh
tools/TagGroupVersionBumper/: CMakeLists.txt  README  TagGroupVersionBumper.cpp
